2006-07-21 Mateusz Loskot <mateusz@loskot.net>

	* source/headers/geos/geom.h,
	source/headers/geos/io.h: Wrapped FIXME message with
	#warning directive to shout about potential headers
	removal in future.


2006-07-21 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/CoordinateList.h,
	  source/headers/geos/geom/Makefile.am, tests/unit/Makefile.am,
	  tests/unit/geom/CoordinateListTest.cpp:
	  CoordinateList class re-introduced, for list-based ops
	  (not strictly mapped to JTS version, not yet at least)

2006-07-13 Charlie Savage <cfis@savagexi.com>

	* swig: Finished porting SWIG bindings to use the C API.
	* swig: Added SWIG back into the GEOS build system.  To build
	  either the Ruby or Python bindings:
	  
	      ./configure --enable-python --enable-ruby
	      
	* automake: Updated EXTRA_DIST to include most SWIG files.
	  Still have to add generated .cxx and .py files.
	* tests: Added tests that cover most of the C-API (in Ruby)	  
	* tests: Started to update the Ruby tests to use the test
	  data used by the XMLTester.
	* tests: Added some quick sanity tests for the Python bindings
	
		
2006-07-11 Charlie Savage <cfis@savagexi.com>

	* swig/geos.i: Updated SWIG bindings to use C API.
	* capi/geos_c.cpp: Added GEOSGeomFromHEX_buf/GEOSGeomToHEX_buf methods
	  that allow reading and writing geometries to and from
	  Hex encoded WKB values.
	* capi/geos_c.cpp: Added GEOS_getWKBByteOrder/GEOS_setWKBByteOrder methods
	  that allows clients to specify the output byte order of WKB 
	  and WKB Hex values that are written by the WKBWriter.
	* capi/geos_c.cpp: Added GEOS_getWKBOutputDims to mirror 
		GEOS_setWKBOutputDims.  These methods allows clients to read the
		current number of dimensions output to WKB and WKB Hex values.
	
2006-07-10 Sandro Santilli <strk@refractions.net>

	* capi/geos_c.cpp: don't use dynamic strings as format arg
	in the formatted message callbacks.
	* source/headers/geos/simplify/DouglasPeuckerLineSimplifier.h: